--- a/HillerødSailingClubRazorPage/Pages/Index.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Hillerød Sejlklub</h1>
+    <p>Vores officelle facebook side: <a href="https://www.facebook.com/hillerodsejl">Facebook</a>.</p>
 </div>
