--- a/HillerødSailingClubRazorPage/Pages/Index.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Hillerød Sejlklub</h1>
-    <p>Vores officelle facebook side: <a href="https://www.facebook.com/hillerodsejl">Facebook</a>.</p>
+    <p>Vores officelle facebook side: <a href="https://www.facebook.com/hillerodsejl " target="_blank">Facebook</a>.</p>
+<div></div>
+    <p>Vores adresse: <a href="https://www.google.com/maps/dir//Hiller%C3%B8d+Sejlklub,+Krostien+11,+3480+Fredensborg/@55.9794051,12.3509417,264m/data=!3m1!1e3!4m9!4m8!1m0!1m5!1m1!1s0x46523f2c3af2ed75:0x32b9f53dd9071649!2m2!1d12.3518267!2d55.9793841!3e0?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Google Maps</a>.</p>
 </div>
