--- a/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/img%20(4).webp"
+                                    <img src="https://imgx1.yachting.com/getattachment/44c63eec-e8a9-47b4-91b1-1bda00ede187/sejlads.aspx?"
                                          class="w-100" />
                                     <a href="#!">
                                         <div class="hover-overlay">
@@ -22,7 +22,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 col-xl-6">
-                                <h5>Quant trident shirts</h5>
+                                <h5>MegaGiga P7</h5>
                                 <div class="d-flex flex-row">
                                     <div class="text-danger mb-1 me-2">
                                         <i class="fa fa-star"></i>
@@ -30,34 +30,34 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <span>310</span>
+                                    <span></span>
                                 </div>
                                 <div class="mt-1 mb-0 text-muted small">
-                                    <span>100% cotton</span>
+                                    <span>7 meter højt sejl</span>
                                     <span class="text-primary"> • </span>
-                                    <span>Light weight</span>
+                                    <span>5 toiletter</span>
                                     <span class="text-primary"> • </span>
-                                    <span>Best finish<br /></span>
+                                    <span>Farve: Duehvid<br /></span>
                                 </div>
                                 <div class="mb-2 text-muted small">
-                                    <span>Unique design</span>
+                                    <span>Unikt design</span>
                                     <span class="text-primary"> • </span>
-                                    <span>For men</span>
+                                    <span>For den trætte familiefar</span>
                                     <span class="text-primary"> • </span>
-                                    <span>Casual<br /></span>
+                                    <span>0 Hestekræfter<br /></span>
                                 </div>
                                 <p class="text-truncate mb-4 mb-md-0">
-                                    There are many variations of passages of Lorem Ipsum available, but the
-                                    majority have suffered alteration in some form, by injected humour, or
-                                    randomised words which don't look even slightly believable.
+                                    Med denne båd, bliver du med garanti lagt mærke til på de høje bølger. 
+                                    Med en 7 meter høj mast, kan du blive set fra rundetårn og kystvagten er aldrig i tvivl om din lokation
+                                    Så slå til nu, og få en fantasisk oplevese på denne båd, hvor toilettet ALDRIG er optaget.
                                 </p>
                             </div>
                             <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                                 <div class="d-flex flex-row align-items-center mb-1">
-                                    <h4 class="mb-1 me-1">$13.99</h4>
-                                    <span class="text-danger"><s>$20.99</s></span>
+                                    <h4 class="mb-1 me-1">2499 DKK</h4>
+                                    <span class="text-danger"><s>$2999 KR</s></span>
                                 </div>
-                                <h6 class="text-success">Free shipping</h6>
+                                <h6 class="text-success">Dagspris</h6>
                                 <div class="d-flex flex-column mt-4">
                                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Details</button>
                                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-primary btn-sm mt-2" type="button">
