--- a/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
@@ -77,7 +77,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/new/img(4).webp"
+                                    <img src="https://www.scan-plast.com/wp-content/uploads/2023/05/Dinghy-Amber-430.jpg"
                                          class="w-100" />
                                     <a href="#!">
                                         <div class="hover-overlay">
