--- a/HillerødSailingClubRazorPage/Pages/Boat.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/Boat.cshtml
@@ -10,9 +10,9 @@
                 <div class="card" style="border-radius: 15px;">
                     <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light"
                          data-mdb-ripple-color="light">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/12.webp"
+                        <img src="https://imgx1.yachting.com/getattachment/44c63eec-e8a9-47b4-91b1-1bda00ede187/sejlads.aspx?"
                              style="border-top-left-radius: 15px; border-top-right-radius: 15px;" class="img-fluid"
-                             alt="Laptop" />
+                             alt="Sejlbåd" />
                         <a href="#!">
                             <div class="mask"></div>
                         </a>
@@ -20,8 +20,8 @@
                     <div class="card-body pb-0">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <p><a href="#!" class="text-dark">Dell Xtreme 270</a></p>
-                                <p class="small text-muted">Laptops</p>
+                                <p><a class="text-dark">MegaGigaP7</a></p>
+                                <p class="small text-muted">Sejlbåd</p>
                             </div>
                             <div>
                                 <div class="d-flex flex-row justify-content-end mt-1 mb-4 text-danger">
