--- a/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
@@ -55,13 +55,13 @@
                             <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
                                 <div class="d-flex flex-row align-items-center mb-1">
                                     <h4 class="mb-1 me-1">2499 DKK</h4>
-                                    <span class="text-danger"><s>$2999 DKK</s></span>
+                                    <span class="text-danger"><s>2999 DKK</s></span>
                                 </div>
-                                <h6 class="text-success">Dagspris</h6>
+                                <h6 class="text-success">1 dags-leje</h6>
                                 <div class="d-flex flex-column mt-4">
-                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Details</button>
+                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Book</button>
                                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-primary btn-sm mt-2" type="button">
-                                        Add to wishlist
+                                        Details
                                     </button>
                                 </div>
                             </div>
@@ -120,11 +120,11 @@
                                 <div class="d-flex flex-row align-items-center mb-1">
                                     <h4 class="mb-1 me-1">399 DKK</h4>
                                 </div>
-                                <h6 class="text-success">Dagpris</h6>
+                                <h6 class="text-success">1 dags-leje</h6>
                                 <div class="d-flex flex-column mt-4">
-                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Details</button>
+                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Book</button>
                                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-primary btn-sm mt-2" type="button">
-                                        Add to wishlist
+                                        Details
                                     </button>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/new/img(5).webp"
+                                    <img src="https://files-dk.klaravikcdn.com/uploads/productimages/10/b9/931404/extrabilder18069174_large.jpg?v=1718199333"
                                          class="w-100" />
                                     <a href="#!">
                                         <div class="hover-overlay">
@@ -187,9 +187,9 @@
                                 </div>
                                 <h6 class="text-success">Free shipping</h6>
                                 <div class="d-flex flex-column mt-4">
-                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Details</button>
+                                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm" type="button">Book</button>
                                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-primary btn-sm mt-2" type="button">
-                                        Add to wishlist
+                                        Details
                                     </button>
                                 </div>
                             </div>
