--- a/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                    <img src="https://imgx1.yachting.com/getattachment/44c63eec-e8a9-47b4-91b1-1bda00ede187/sejlads.aspx?"
+                                    <img src ="https://imgx1.yachting.com/getattachment/44c63eec-e8a9-47b4-91b1-1bda00ede187/sejlads.aspx"
                                          class="w-100" />
                                     <a href="#!">
                                         <div class="hover-overlay">
