--- a/HillerødSailingClubRazorPage/Pages/Shared/_Layout.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HillerødSailingClubRazorPage.styles.css" asp-append-version="true" />
 </head>
-<body style="background-color: lightblue;">
-    <header>
+<body style="background-color: cyan;">
+    <header">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <img style="height:80px; padding:10px;"      src="https://lh4.googleusercontent.com/proxy/qrB26OHxkIYcsPZRY193ZifewRLINmK1UWwd6UlDOz8ultb_zdJ3_lVM3ytwUgyoAKRYDSYPatj3etmXcH3BikyZ3ZGLIo91zqPaybsPKHlxY2yUKdW1Mjaoeg7Mv-M4evHuJxbaRdlmtsFKIIyiNp8U" />
