--- a/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/BoatDict.cshtml
@@ -46,10 +46,8 @@
                                     <span class="text-primary"> • </span>
                                     <span>Ren sejlglæde<br /></span>
                                 </div>
-                                <p class="text-truncate mb-4 mb-md-0">
-                                    Med denne båd, bliver du med garanti lagt mærke til på de høje bølger. 
-                                    Med en 7 meter høj mast, kan du blive set fra rundetårn og kystvagten er aldrig i tvivl om din lokation
-                                    Så slå til nu, og få en fantasisk oplevese på denne båd, hvor toilettet ALDRIG er optaget.
+                                <p class="text mb-4 mb-md-0">
+                                    Med denne båd, bliver du med garanti lagt mærke til på de høje bølger. Med en 7 meter høj mast, kan du blive set fra rundetårn og kystvagten er aldrig i tvivl om din lokationSå slå til nu, og få en fantasisk oplevese på denne båd, hvor toilettet ALDRIG er optaget.
                                 </p>
                             </div>
                             <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
@@ -111,7 +109,7 @@
                                     <span class="text-primary"> • </span>
                                     <span>Det kan ikke gå galt<br /></span>
                                 </div>
-                                <p class="text-truncate mb-4 mb-md-0">
+                                <p class="text mb-4 mb-md-0">
                                     Er du ude efter en hyggelig tur, men ikke vil springe banken? Så er Walkerbay noget for dig.
                                 </p>
                             </div>
@@ -173,7 +171,7 @@
                                     <span class="text-primary"> • </span>
                                     <span>Garantere en god oplevelse<br /></span>
                                 </div>
-                                <p class="text-truncate mb-4 mb-md-0">
+                                <p class="text mb-4 mb-md-0">
                                     Hvis penge ikke er et problem, og du vil have den fulde oplevelse, så er denne perle fra Arcona lige noget for dig.
                                 </p>
                             </div>
