--- a/HillerødSailingClubRazorPage/Pages/Index.cshtml
+++ b/HillerødSailingClubRazorPage/Pages/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hillerød Sejlklub</h1>
-    <p>Vores officelle facebook side: <a href="https://www.facebook.com/hillerodsejl " target="_blank">Facebook</a>.</p>
+    <h1 style="color: black" class="display-4">Hillerød Sejlklub</h1>
+    <p style ="color: black">Vores officelle facebook side: <a href="https://www.facebook.com/hillerodsejl " target="_blank">Facebook</a>.</p>
 <div></div>
-    <p>Vores adresse: <a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x46523f2c3af2ed75:0x32b9f53dd9071649?sa=X&ved=1t:8290&ictx=111 " target="_blank">Google Maps</a>.</p>
+    <p style="color: black">Vores adresse: <a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x46523f2c3af2ed75:0x32b9f53dd9071649?sa=X&ved=1t:8290&ictx=111 " target="_blank">Google Maps</a>.</p>
 </div>
